prevent adaptive placeholder from wrapping

--- a/resources/assets/css/elements/form.less
+++ b/resources/assets/css/elements/form.less
@@ -194,7 +194,10 @@ input {
     order: 1;
     top: 0;
     left: 0;
+    max-width: 100%;
     padding: 1.25rem;
+    overflow: hidden;
+    white-space: nowrap;
     user-select: none;
     pointer-events: none;
     transition: @run_slow @bezier_deform;
